--- a/Book Club.html
+++ b/Book Club.html
@@ -18,7 +18,7 @@
             <h1>
                 Mount Caramel Book Club
             </h1>
-            <img src="bookmain.jpeg" alt="Row of books" width="300">
+            <img src="book.jpg" alt="Row of books" width="300">
         </header>
         <!--navbar-->
 
